crates/solidity-v2/testing/snapshots/cst_output/from_v1/ConstructorDefinition/override_attribute/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected OverrideKeyword_Reserved. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OpenBrace, PayableKeyword_Reserved, PublicKeyword_Reserved, RevertKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/ConstructorDefinition/override_attribute/input/generated/input.sol:5:16]
   │
 5 │ constructor () override {}
   │                ────┬───  
   │                    ╰───── Error occurred here.
───╯
